# Artha-Gemini

./: .gitignore  README.md  __init__.py  api.json  gemini.py  install.py  pyproject.toml  requirements.txt
core/: api.py  img.py  llm.py  node.py
nodes/: __init__.py
nodes/llm/: gemini.py  gen.py  io.py  profile.py
web/js/: ResponseDisplay.js  ResponseMarkdown.js
