[project]
name = "ComfyUI-Artha-Gemini"
description = "ComfyUI custom nodes for interacting with the Gemini api for image and video generation prompting."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = ["torch", "numpy", "Pillow>=11.0.0", "google-generativeai"]

[project.urls]
Repository = "https://github.com/Cyrostar/ComfyUI-Artha-Gemini"

[tool.comfy]
PublisherId = "Cyrostar"
DisplayName = "ComfyUI-Artha-Gemini"
Icon = "🔱"
