[project]
name = "Artha-Gemini"
description = "ComfyUI custom nodes for interacting with the Gemini api for image and video generation prompting."
version = "1.2.0"
license = { file = "LICENSE" }
dependencies = ["torch", "numpy", "Pillow>=11.0.0", "google-generativeai", "google-genai"]

[project.urls]
Repository = "https://github.com/Cyrostar/Artha-Gemini"

[tool.comfy]
PublisherId = "cyrostar"
DisplayName = "Artha-Gemini"
Icon = "🔱"

